--- a/order/package.json
+++ b/order/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "esm": "^3.2.25",
     "express": "^4.17.1",
+    "kafkajs": "^1.15.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.1"
