--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: "3"
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
@@ -17,7 +17,36 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://kafka:29092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  orders:
+    build: ./order
+    ports:
+      - 3001:3001
+    depends_on:
+      - postgres
+
+  payments:
+    build: ./payment
+    ports:
+      - 3002:3002
+    depends_on:
+      - kafka
+
+  postgres:
+    image: postgres
+    volumes:
+      - /home/pedro/postgresql:/var/lib/postgresql
+      - /home/pedro/postgresql/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: postgres
+
+networks:
+  default:
+    driver: bridge
