--- a/order/package.json
+++ b/order/package.json
@@ -2,16 +2,15 @@
   "name": "order",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/server.js"
+    "start": "nodemon src/server.js",
+    "start-prod": "node src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "esm": "^3.2.25",
     "express": "^4.17.1",
     "kafkajs": "^1.15.0",
     "pg": "^8.5.1",
@@ -19,13 +18,6 @@
     "sequelize": "^6.5.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.13.16",
-    "@babel/node": "^7.13.13",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/register": "^7.13.16",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   }
