--- a/payment/src/config.json
+++ b/payment/src/config.json
@@ -2,7 +2,7 @@
   "Kafka": {
     "Client": "my-app",
     "GroupId": "group-id",
-    "Brokers": ["localhost:29092"],
+    "Brokers": ["kafka:29092"],
     "Topics": {
       "Orders": "topic-orders"
     },
